# ReddMobile

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  final_sync_check.sh  system_health_report.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-build.yml  android_build.yml  build.yml  flutter_build.yml
api/: README.md
app/: README.md
core/: README.md
docs/: DEVELOPER_MANUAL.md  USER_GUIDE.md
flutter_app/: .env.example  README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/models/: transaction.dart  utxo.dart  vault_record.dart
flutter_app/lib/pages/: activity_page.dart  backup_phrase_page.dart  dashboard_page.dart  lock_page.dart  pulse_page.dart  receive_page.dart  reddid_registration_page.dart  (+5 more)
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: activity_ui_test.dart  blockbook_service_test.dart  broadcast_test.dart  dashboard_bloc_test.dart  multi_input_test.dart  secure_storage_service_test.dart  vault_crypto_test.dart  vault_integration_test.dart  widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
rust_core/: Cargo.toml
rust_core/include/: redd_crypto.h
rust_core/src/: lib.rs  transaction_builder.rs  transaction_signer.rs  vault_crypto.rs
test/: dashboard_bloc_test.dart
(+43 files in other folders)
