[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
bip39 = "2.0.0"
rand = "0.8.5"
# New Crypto Dependencies for Address Derivation
hmac = "0.12.1"
pbkdf2 = "0.11.0"
sha2 = "0.10.8"
ripemd = "0.1.3"
bs58 = "0.5.0"
# Lightweight secp256k1 implementation
k256 = { version = "0.13.1", features = ["ecdsa"] }
