[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bip39 = "2.0.0"
rand = "0.8.5"
hmac = "0.12.1"
pbkdf2 = "0.11.0"
sha2 = "0.10.8"
ripemd = "0.1.3"
bs58 = { version = "0.5.0", features = ["check"] } # Enables with_check()
k256 = { version = "0.13.1", features = ["ecdsa"] }
