[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bip39 = "2.0.0"
bip32 = { version = "0.5.0", features = ["secp256k1"] }
rand = "0.8.5"
sha2 = "0.10.8"
ripemd = "0.1.3"
bs58 = { version = "0.5.0", features = ["check"] }
k256 = { version = "0.13.1", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
